Fix modal sizing on mobile

--- a/app/styles/components/_modals.scss
+++ b/app/styles/components/_modals.scss
@@ -13,24 +13,43 @@
   flex: 0 0 auto;
   align-self: center;
   box-shadow: 0 2px 5px rgba(black, 0.3);
-  min-width: 400px;
-  max-height: calc(100vh - 2 * #{$desktop-gutter});
+  max-height: calc(100vh - 2 * #{$gutter});
+  width: calc(100vw - 2 * #{$gutter});
   margin: 0 auto;
   position: static;
   z-index: 2000;
   @include animation(modal-appear 0.2s ease-in);
+
+  @media (min-width: $breakpoint-tablet) {
+    max-height: calc(100vh - 2 * #{$gutter});
+    min-width: 500px;
+    max-width: none;
+    width: auto;
+  }
+
+  @media (min-width: $breakpoint-desktop) {
+    max-height: calc(100vh - 2 * #{$desktop-gutter});
+  }
 }
 
 .ember-modal-dialog--scrollable {
-  height: calc(100vh - 2 * #{$desktop-gutter});
+  height: calc(100vh - 2 * #{$gutter});
   display: flex;
   flex-direction: column;
+
+  @media (min-width: $breakpoint-desktop) {
+    height: calc(100vh - 2 * #{$desktop-gutter});
+  }
 }
 
 .ember-modal-dialog__scrollable-window {
   flex: 1 0;
-  margin: -$desktop-gutter;
+  margin: $negative-gutter;
   position: relative;
+
+  @media (min-width: $breakpoint-desktop) {
+    margin: -$desktop-gutter;
+  }
 }
 
 .ember-modal-dialog__scrollable-content {
